@@ -17,9 +17,12 @@ UPDATED FUNCTIONS:
   * The Desc() procedure now puts the response in columns instead in rows as up to now
     in the case of two factor variables. So the resulting table is transposed compared
     to before.
+  * The Desc() procedure for 2x2 tables includes a confidence interval for 
+    the difference of proportions based on BinomDiffCI(..., method="mn").
 
 BUGFIXES:
-  * none
+  * The documentation of RelRisk() did not correspond to the code.
+    (Credits to martyoh,  https://github.com/AndriSignorell/DescTools/issues/118)
 
 
 
